[tool.poetry]
name = "bpytop"
version = "1.0.16"
description = "Resource monitor that shows usage and stats for processor, memory, disks, network and processes."
authors = ["Aristocratos <jakob@qvantnet.com>"]
license = "Apache-2.0"
include = ["bpytop-themes/*.theme"]

[tool.poetry.dependencies]
python = "^3.6"
psutil = "^5.7.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
bpytop = "bpytop:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
