[tool.poetry]
name = "bpytop"
version = "1.0.61"
description = "Resource monitor that shows usage and stats for processor, memory, disks, network and processes."
readme = "README.md"
authors = ["Aristocratos <jakob@qvantnet.com>"]
homepage = "https://github.com/aristocratos/bpytop"
license = "Apache-2.0"
include = ["bpytop-themes/*.theme"]

[tool.poetry.dependencies]
python = "^3.7"
psutil = "^5.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
mypy = "^0.790"
pylint = "^2.6.0"

[tool.poetry.scripts]
bpytop = "bpytop:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
